finished toast installed modal

--- a/practical-react/modal/package.json
+++ b/practical-react/modal/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "toast",
+  "name": "modal",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -8,8 +8,8 @@
     "@testing-library/user-event": "^7.1.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.1",
-    "react-toastify": "^6.0.8"
+    "react-modal": "^3.11.2",
+    "react-scripts": "3.4.1"
   },
   "scripts": {
     "start": "react-scripts start",
