finished credit-cards, started date-picker

--- a/practical-react/9-date-picker/package.json
+++ b/practical-react/9-date-picker/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "8-credit-cards",
+  "name": "9-date-picker",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -7,7 +7,7 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "react": "^16.13.1",
-    "react-credit-cards": "^0.8.3",
+    "react-datepicker": "^3.1.3",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1"
   },
