--- a/practical-react/12-loading-indicators/package.json
+++ b/practical-react/12-loading-indicators/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "11-video-player",
+  "name": "loading-indicators",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -8,7 +8,6 @@
     "@testing-library/user-event": "^7.1.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-player": "^2.6.0",
     "react-scripts": "3.4.1"
   },
   "scripts": {
